Fixes #509 Warning pop displays out of bounds

--- a/app/styles/components/detailview.scss
+++ b/app/styles/components/detailview.scss
@@ -244,7 +244,7 @@
        padding: 5px;
        position: absolute;
        top: -66px;
-       left: -75px;
+       left: -160px;
        color: rgba(223, 242, 210, 0.5);
        width: 180px;
        z-index: 100039;
